fixing pom