@@ -87,6 +87,12 @@
 		    <version>5.8.1</version>
 		    <scope>test</scope>
 		</dependency>
+		<dependency>
+		  <groupId>junit</groupId>
+		  <artifactId>junit</artifactId>
+		  <version>4.12</version>
+		  <scope>test</scope>
+		</dependency>
   </dependencies>
   <build>
     <plugins>
@@ -96,7 +102,19 @@
 	            <source>${java.version}</source>
 	            <target>${java.version}</target>
 	        </configuration>
+            <version>3.10.1</version>
 	     </plugin>
+	     <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M7</version>
+            <configuration>
+                <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+                <argLine>--add-opens java.base/java.io=ALL-UNNAMED</argLine>
+            </configuration>
+
+        </plugin>
     </plugins>
   </build>
 </project>
